--- a/src/modules/Blog/index.scss
+++ b/src/modules/Blog/index.scss
@@ -1,5 +1,5 @@
 .blog {
     &__blog-list {
-        min-height: 29.583vw;
+        min-height: 49.367vh;
     }
 }
